--- a/WEll/index.html
+++ b/WEll/index.html
@@ -16,33 +16,33 @@
     <div class="container">
       <div class="card">
         <h2>01</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>UI/UX Designer Создает удобные и эстетичные интерфейсы для веб - и мобильных приложений. Проводит исследования пользователей, проектирует wireframes и прототипы, тестирует дизайн.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
       <div class="card">
         <h2>02</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>Frontend Developer Разрабатывает клиентскую часть веб-приложений, оптимизирует производительность, работает с API. Ключевые навыки: JavaScript/TypeScript, React/Vue, CSS/SCSS, REST/GraphQL.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
       <div class="card">
         <h2>03</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>Product Designer Участвует в полном цикле создания продукта — от идеи до реализации. Анализирует метрики, улучшает пользовательский опыт, сотрудничает с разработчиками и менеджерами.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
       <div class="card">
         <h2>04</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>Full-Stack Developer аботает и над фронтендом, и над бэкендом: пишет API, настраивает базы данных, разрабатывает интерфейсы. Ключевые навыки: JavaScript/TypeScript, Node.js, Express/Nest.js, React, SQL/NoSQL.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
       <div class="card">
         <h2>05</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>Motion Designer (Web & UI Animation) Создает анимации для интерфейсов, сайтов и рекламных материалов. Работает с микровзаимодействиями и сложными визуальными эффектами. Ключевые навыки: After Effects.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
       <div class="card">
         <h2>06</h2>
-        <p>Sample text. Click to select the text box. Click again or double click to start editing the text. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#" class="button">LEARN MORE</a>
+        <p>DevOps Engineer (for Development Teams) Настраивает CI/CD, автоматизирует деплой, оптимизирует инфраструктуру для дизайн- и dev-процессов. Ключевые навыки: Docker/Kubernetes.</p>
+        <a href="#" class="button">Узнать больше</a>
       </div>
     </div>
   </main>
